// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch custom method 1`] = `
Array [
  Array [
    "the-url",
    Object {
      "body": "{\\"test\\":\\"test\\"}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "DELETE",
    },
  ],
]
`;

exports[`fetch mimimum 1`] = `
Array [
  Array [
    "the-url",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`fetch mimimum 2`] = `
Object {
  "status": 200,
}
`;

exports[`fetch raw response 1`] = `
Array [
  Array [
    "the-url",
    Object {
      "body": "{\\"test\\":\\"test\\"}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`fetch raw response 2`] = `
Object {
  "json": [Function],
}
`;

exports[`fetch with body 1`] = `
Array [
  Array [
    "the-url",
    Object {
      "body": "{\\"test\\":\\"test\\"}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`fetch with headers 1`] = `
Array [
  Array [
    "the-url",
    Object {
      "body": "{\\"test\\":\\"test\\"}",
      "headers": Object {
        "Content-Type": "application/json",
        "X-TEST": "1234",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`multipart minimum 1`] = `
"--boundary1

1234

--boundary1--"
`;

exports[`multipart multiple parts 1`] = `
"--boundary1

1234

--boundary1

abcd

--boundary1--"
`;

exports[`multipart with headers 1`] = `
"--boundary1
Authorization: Bearer the-token

1234

--boundary1--"
`;
